--- a/app/views/ideator_lessons/lessons/lesson_3.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_3.html.erb
@@ -1,11 +1,11 @@
 <h1><%= title_for(IdeatorLesson, 2, 1) %></h1>
 
 <p>
-	Our app that we are going to develop together called Ideator is going to be an app where anyone can post ideas on to the website and they are automatically updated. It will also have the ability to show random ideas as well. In order to start making this website, we have to start visualizing what we want it to look like.
+	The app that we are going to be developing together called Ideator, is going to be an app where anyone can post ideas on to the website and they are automatically updated. It will also have the ability to show ideas randomly as well. In order to start making this website, we have to start visualizing what we want it to look like.
 </p>
 
 <p>
-	In every app, we want to create wireframes so we have guidance on how we want the app to look and how we want it to function. The simplest and best way in my opinion is to do it by hand.
+	In every app, we want to create wireframes so we have guidance on how we want the app to look and how we want it to function. The simplest way in my opinion is to do it by hand.
 </p>
 
 <p>
@@ -18,12 +18,14 @@
 	As you can see, the wireframes don't have to be perfect, it just needs to get the job done! The key here is to visualize what features you want on your web application so that it's easier to think through how to build your web application.
 </p>
 
+<h3>What kind of information do we need to store?</h3>
+
 <p>
 	Along with these mock ups, let's specify what kind of data we want to store in my database.
 </p>
 
 <p>
-	In our app, we want the <strong>ability to post ideas</strong>. To save those ideas into the app, <strong>we need to store the ideas in a database</strong>.
+	In our app, we want the <strong>ability to post ideas</strong>. In order to build the ability to post ideas in the app, <strong>we need to store the ideas in a database</strong>.
 </p>
 
 <p>
@@ -31,7 +33,7 @@
 </p>
 
 <p>
-	So each idea will have two pieces of information attached to it, a <code>description</code> and an <code>author</code>. 
+	In other words, each idea will have two pieces of information attached to it, a <code>description</code> and an <code>author</code>. 
 </p>
 
 <!-- <p>
@@ -39,7 +41,7 @@
 </p> -->
 
 <p>
-	Drawing this out will become useful later on. Let’s just keep this in mind for now and move on.
+	This will become useful later on, so <strong>don't worry if you feel like what we just did is confusing</strong>. Let’s just keep this in mind for now and move on.
 </p>
 
 
