--- a/app/views/ideator_lessons/lessons/lesson_4.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_4.html.erb
@@ -1,7 +1,7 @@
 <h1><%= title_for(IdeatorLesson, 2, 2) %></h1>
 
 <p>
-	Okay cool. Now let’s open up Sublime Text and open the project file up so we can start developing our web application. In sublime, open up the folder called “Ideator” located in the desktop that we just created.
+	Okay cool. Now let’s open up Sublime Text and open the folder called “Ideator” located in the desktop that contains our rails application.
 </p>
 
 <p>
