--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -1,5 +1,5 @@
 <div class = "row">
-	<h1 style="text-align:center;">Start Your Coding Journey</h1>
+	<!-- <h1 class="text-center">Start Your Coding Journey</h1> -->
 
 	<%= render partial: 'course', locals: {course: 'Intro', course_name: "An introduction to web development and why it's so cool.", available: true, course_link: intro_path, course_access: 'intro'} %>
 
@@ -12,7 +12,7 @@
 
 	<%= render partial: 'course', locals: {course: 'Ruby Core Training', course_name: 'Strengthen your Ruby skills by going through various coding challenges. Sharpening your thinking skills is crucial in becoming a developer.', available: true, course_link: ruby_core_path, course_access: 'ruby_core'} %>
 
-	<%= render partial: 'course', locals: {course: 'Instapost - Share your photos online', course_name: 'Create a clone of the popular Instagram application. You are going to be creating a more complex app than before! Get excited!', available: true, course_link: instapost_path, course_access: 'instapost' } %>
+	<%= render partial: 'course', locals: {course: 'Instapost - Share your photos', course_name: 'Create a clone of the popular Instagram application. You are going to be creating a more complex app than before! Get excited!', available: true, course_link: instapost_path, course_access: 'instapost' } %>
 
 	<%= render partial: 'course', locals: {course: 'JavaScript/jQuery', course_name: 'With JavaScript, you can manipulate the web page in super fun ways.', available: true, course_link: javascript_path, course_access: 'javascript'} %>
 
