--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <div class = "row">
   <div class = "col-xs-10 col-xs-offset-1">
 
-    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+    <h2>Edit Settings</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
@@ -36,16 +36,17 @@
       </div>
 
       <div class="field">
-        <%= f.label :avatar %><br />
+        <%= f.label 'Profile Picture' %><br />
         <%= f.file_field :avatar %>
       </div>
       
       <br>
       <div class="actions">
-        <%= f.submit "Update", class: 'btn btn-primary' %>
+        <%= f.submit "Update", class: 'btn btn-success' %>
       </div>
     <% end %>
 
+    <br>
     <%= link_to "Back", :back %>
 
   </div>
