--- a/app/views/static_pages/_course.html.erb
+++ b/app/views/static_pages/_course.html.erb
@@ -1,5 +1,5 @@
 <div class = "col-sm-12 col-md-4 course_box">
-	<h4 class = "underlined-header"><%= course %></h4>
+	<h3 class = "underlined-header"><i class="fa fa-code" style="color: #d9534f"aria-hidden="true"></i> <%= course %></h3>
 	<p><%= course_name %></p>
 	<%= link_to 'Learn', course_link, class: 'btn btn-danger course_button' if available && has_access?(course_access) %>
   <%= link_to 'Locked :)', "", class: 'btn btn-default course_button' if available && !has_access?(course_access) %>
