--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -24,6 +24,10 @@
                     </li>
 
                     <li class="nav-item page-scroll">
+                      <% 
+                        @cards = current_user.cards.where(repetition_date: nil)
+                        @cards += current_user.cards.today
+                      %>
                       <%= link_to "STUDY CARDS <span class='badge nav-badge'>#{@cards.count}</span>".html_safe, study_path %>
                     </li>
 
