--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,12 @@
+.prof_pic_sm {
+  border-radius: 50%;
+  height: 100px;
+  margin: 0 auto;
+  width: 100px;
+  display: block;
+  border: 4px solid #ec6952;
+}
+
 .nav-badge {
   margin-top: -3px;
   margin-left: 5px;
