--- a/app/views/html_css_lessons/lessons/lesson_1.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_1.html.erb
@@ -33,11 +33,13 @@
 </p>
 
 <p>
-  What you should be focusing on though, is getting the general flow of how a web page is structured. Think "oh cool, so this is how you make this to look like this". If you stumble across a question like "wait, how do I make a link to another URL again?", <strong>Google it.</strong> Google "how to make a link to url html" and you'll get your answer in 2 seconds. What do you do if you want to make the color of your font red? Google "how to make font color red". Boom, you got your answer. Easy, right?
+  What you should be focusing on though, is understand the general flow of how a web page is structured. If you stumble across a question like "wait, how do I make a link to a URL again?", <strong>Google it.</strong> Google "how to make a link to url html" and you'll get your answer in 2 seconds. What do you do if you want to make the color of your font red? Google "how to make font color red". Boom, you got your answer. Easy, right?
 </p>
 
+<%= create_flashcard %>
+
 <p>
-  Cool. Well we're all set! We're super excited to get you started with coding! Let's begin, if you are ready, that is.
+  Cool. Well we're all set! We're super excited to get you started with coding!
 </p>
 
 <blockquote>
