--- a/app/views/html_css_lessons/lessons/lesson_2.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_2.html.erb
@@ -16,6 +16,17 @@
 	You'll be building <strong>a personal website</strong>, a <strong>responsive blog theme</strong>, a <strong>small business website</strong>, and a <strong>CSS robot</strong>. Pretty awesome stuff! For an intro course, we think it's one of the best courses out there.
 </p>
 
+<h3>Directions</h3>
+<ul>
+  <li>Don't worry about finishing Project 5</li>
+  <li>Finish Project 1 ~ 4</li>
+  <li>Upload screenshot of your completed Dash Assembly screen using <a href = "http://imgur.com/" target = "_blank">imgur</a></li>
+  <li>Post the link in below in the submissions section</span> so that we can see that you've completed the course</li>
+  <li>Go to next lesson while you wait for our feedback :)</li>
+</ul>
+
+<br>  
+
 <div class = "well">
   <h3>What are Responsive Websites?</h3>
   <p>
@@ -27,15 +38,11 @@
   <p>
     In the Dash course you'll do in this section, you'll learn how to make responsive websites. Throughout your time at Techrise, you'll learn how to make responsive websites. <strong>Having the mindset of creating websites that are responsive is important in web development.</strong>
   </p>
+
+  <%= create_flashcard %>
 </div>
 
-<p>
-  For now, let's not worry about completing Project 5 since it goes into JavaScript. Let's focus on trying to finish Project 1 ~ 4. If you're really ambitious, you can go ahead and finish Project 5, but it's not necessary to do just yet. We'll get there soon though!
-</p>
 
-<p>
-  Once you've completed the course, <span style="color:red;">upload a screenshot of your completed Dash Assembly screen using <a href = "http://imgur.com/" target = "_blank">imgur</a> and post the link in below in the submissions section</span> so that we can see that you've completed the course. We'll take a look at your work and give you a thumbs up. While you wait for feedback, feel free to go ahead to the next lesson and learn some more HTML and CSS.
-</p>
 
 <br>
 
