--- a/app/views/html_css_lessons/lessons/lesson_3.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_3.html.erb
@@ -36,17 +36,23 @@
 
 <h3>GitHub</h3>
 <p>
-  The last thing we want to do is to create a GitHub account. Let's go to the GitHub home page (you know how to find this now) and let's find a button to sign up. For me, I see a light green button that says "Sign up for GitHub". That's what we want. Once we're all signed up, let's log in to our account. In the following lessons, we'll walk you through how to use GitHub, so don't worry about trying to figure out how to use it just yet.
+  The last thing we want to do is to create a GitHub account.
+</p>
+
+<ul>
+  <li>Go to the GitHub home page</li>
+  <li>Find the sign up button</li>
+  <li>Log into your account</li>
+</ul>
+
+<p>
+  In the following lessons, we'll walk you through how to use GitHub, so don't worry about trying to figure out how to use it just yet.
 </p>
 
 <hr>
 
 <p>
   Cool! That's all we need for now.
-</p>
-
-<p>
-	We believe in exposing you to building actual websites as early as possible instead of spending a lot of time learning the syntax of programming langauges. That's because by building things as early as possible, you'll have more fun and will be motivated to learn more.
 </p>
 
 <p>
