--- a/app/views/html_css_lessons/lessons/lesson_8.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_8.html.erb
@@ -23,7 +23,11 @@
 </code></pre>
 
 <p>
-  Next, let's go to the Components section of the bootstrap website and see what else we can use. If we scroll all the way down, we see a component called a Jumbotron. We're not sure what a Jumbotron is, but it looks like something we could use in our landing page. It looks good, so let's add this in. Currently, we have a "Hello" within a <code>h1</code> tag that we don't need, so <span style="color:red;">let's get rid of that.</span>
+  Next, let's go to the Components section of the bootstrap website and see what else we can use. If we scroll all the way down, we see a component called a Jumbotron (<%= link_to 'click here', 'http://getbootstrap.com/components/#jumbotron' %> if you don't see it). We're not sure what a Jumbotron is, but it looks like something we could use in our landing page. It looks good, so let's add this in.
+</p>
+
+<p>
+  Currently, we have a "Hello" within a <code>h1</code> tag that we don't need, so <strong><span style="color:red;">let's get rid of that.</span></strong>
 </p>
 
 <p>
@@ -31,7 +35,28 @@
 </p>
 
 <p>
-  Let's now add some text in here that tells users what our company does. Let's replace the text inside the <code>h1</code> tag with our brand name. Let's then add some paragraphs about what we do. So in our case, I'm going to add an opening and closing <code>p</code> tag, and between those, I'm going to add some text like "Learn how to code with Techrise". Then, I'm going to add another paragraph by adding a opening and closing <code>p</code> tag and inserting some text between those. So maybe something like "Learn HTML, CSS, JavaScript, Ruby, and Ruby on Rails". At this point, your code should look something similar to this.
+  Let's now add some text in here that tells users what our company does.
+</p> 
+
+<ul>
+  <li>
+    Let's replace the text inside the <code>h1</code> tag with our brand name.
+  </li>
+  <li>
+    Let's then add some paragraphs about what we do.
+  </li>
+  <ul>
+    <li>
+      So in our case, I'm going to add an opening and closing <code>p</code> tag, and between those, I'm going to add some text like "Learn how to code with Techrise".
+    </li>
+  </ul>
+  <li>
+    Add another paragraph by adding a opening and closing <code>p</code> tag and inserting some text between those.
+  </li>
+</ul>
+
+<p>
+  At this point, your code should look something similar to this.
 </p>
 
 <pre><code class="erb">
