--- a/app/views/html_css_lessons/lessons/lesson_9.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_9.html.erb
@@ -13,7 +13,7 @@
 </p>
 
 <p>
-  This will take you to the documentation on how the grid system exactly works. <strong>First, read through the documentation carefully to get the gist of it.</strong> It will probably still be confusing, so let's go through the basics and then implement it on our landing page.
+  <%= link_to 'This link', 'http://getbootstrap.com/css/#grid' %> will take you to the documentation on how the grid system exactly works. <strong>First, read through the documentation carefully to get the gist of it.</strong> It will probably still be confusing, so let's go through the basics and then implement it on our landing page.
 </p>
 
 <h3>Rows</h3>
@@ -42,6 +42,8 @@
     &lt;!-- rest of code below --&gt;
 
 </code></pre>
+
+<%= create_flashcard %>
 
 <h3>Columns</h3>
 <p>
