--- a/app/views/intro_lessons/lessons/lesson_1.html.erb
+++ b/app/views/intro_lessons/lessons/lesson_1.html.erb
@@ -28,7 +28,7 @@
 </p>
 
 <p>
-	That's why we're here to support your journey. We're creating a curriculum for you that will teach you to become a self-sufficient web developer who is able to learn on their own.
+	<strong>That's why we're here to support your journey.</strong> We're creating a curriculum for you that will teach you to become a self-sufficient web developer who is able to learn on their own.
 </p>
 
 <p>
@@ -36,11 +36,15 @@
 </p>
 
 <p>
-	Our goal is not to train you to become superstar coders from day one. Instead our goal is to teach you the essential skills and tools in order for you to become one in the future.
+	<strong>
+		Our goal is not to train you to become superstar coders from day one. Instead our goal is to teach you the essential skills and tools in order for you to become one in the future.
+	</strong>
 </p>
 
 <p>
-	Learning how to code <i>can</i> and <i>will</i> change your life.
+	<strong>
+		Learning how to code <i>can</i> and <i>will</i> change your life.
+	</strong>
 </p>
 
 <br>
