--- a/app/views/intro_lessons/lessons/lesson_5.html.erb
+++ b/app/views/intro_lessons/lessons/lesson_5.html.erb
@@ -34,9 +34,9 @@
   With that being said, it makes sense to ask questions to the smartest person. And Google is the smartest person in the world. Most of the time, your questions are questions that other people have had in the past. People ask these questions on sites like <a href = "http://stackoverflow.com/" target = "_blank">Stack Overflow</a>, which tend to show up high in Google searches. We'll teach you how to Google effectively throughout the course, but just keep in mind that most of your problems can be solved with a simple and quick Google search. <strong>Googling is an essential skill to becoming a competent web developer.</strong>
 </p>
 
-<h3>Utilize the Quiz Questions</h3>
+<h3>Utilize the Flashcards</h3>
 <p>
-	The quiz questions are designed so you retain the information you have just learned. We are trying to create connections in your brain so you can recall them later. Don't just skim through these quiz questions or look at the answers before pondering about the answer. Write the answers on a word doc, compare the answers, and if you didn't get it, look over the material again. If you still don't get it, <strong>Google it</strong>.
+	The flashcards are designed so you retain the information you have just learned. We are trying to create connections in your brain so you can recall them later. Don't just skim through these questions or look at the answers before pondering about the answer.
 </p>
 
 <h3>Code when you feel like it</h3>
@@ -69,7 +69,7 @@
 
 <br>
 <br>
-<%= link_to "Alright, I'm ready!", courses_path, class: 'btn btn-danger btn-lg btn-block' %>
+<%= link_to "Alright, I'm ready!", html_css_lessons_path(1), class: 'btn btn-danger btn-lg btn-block' %>
 
 <script>
 $( '#HideHighFive' ).click(function() {
