--- a/app/views/html_css_lessons/lessons/lesson_5.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_5.html.erb
@@ -9,7 +9,7 @@
 </p>
 
 <p>
-  Bootstrap is a front end framework that allows developers who don't know anything at all about design, to <strong>create websites that look pretty good, pretty easily.</strong> Some people say that relying on it isn't really the best way to do things and and all websites that use bootstrap look the same. This might be super true, BUT what we want to do is teach you <strong>how to build things as fast as possible so that you get a basic understanding and feeling for how everything works together.</strong> After you become comfortable with HTML and CSS, we can start worrying about not using bootstrap.
+  Bootstrap is a front end framework that allows developers who don't know anything at all about design, to <strong>create websites that look pretty good, pretty easily.</strong> Some people say that relying on it isn't really the best way to do things and and all websites that use bootstrap look the same. This might be true, BUT what we want to do is teach you <strong>how to build things as fast as possible so that you get a basic understanding and feeling for how everything works together.</strong> After you become comfortable with HTML and CSS, we can start worrying about not using bootstrap.
 </p>
 
 <p>
