--- a/app/views/html_css_lessons/lessons/lesson_6.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_6.html.erb
@@ -9,7 +9,7 @@
 </p>
 
 <p>
-  Let's then open up Sublime and open a new file (hit command + N for Mac, control + N for Windows) and save this file as <code>index.html</code>. Let's also make sure to save this file in your folder that you just created, so for me I'm making sure I save it in the folder called <code>Landing Page Mock</code>.
+  Let's then open up Sublime and open a new file (Shortcut: <code>Command + N</code> for Mac, <code>Control + N</code> for Windows) and save this file as <code>index.html</code>. Let's also make sure to save this file in your folder that you just created, so for me I'm making sure I save it in the folder called <code>Landing Page Mock</code>.
 </p>
 
 <p>
@@ -55,11 +55,19 @@
 </p>
 
 <p>
-  Now we're going to get to the fun part. Let's add some bootstrap magic to our page. In order to do that, let's go to our web browser and search for "bootstrap" and go to the first search result. Then let's navigate to the "Getting Started" page, which should be on the top navigation bar on Bootstrap's website. If you can't find it, the trick is to hit Command + F if you're on a Mac or Control + F if you're on a Windows and search for "Getting Started".
+  Now we're going to get to the fun part. Let's add some bootstrap magic to our page. In order to do that, let's go to our web browser and search for "bootstrap" and go to the first search result. Then let's navigate to the "Getting Started" page, which should be on the top navigation bar on Bootstrap's website. If you can't find it, the trick is to hit <code>Command + F</code> if you're on a Mac or <code>Control + F</code> if you're on a Windows and search for "Getting Started".
 </p>
 
+<%= create_flashcard %>
+
 <p>
-  If we scroll down on this page, the first thing it says is something about a Bootstrap CDN. <strong>CDN stands for Content Delivery Network, and it basically provides developers with a bunch of files without having to download them into your computer or server.</strong> So in our case, instead of manually downloading Bootstrap's CSS and JavaScript files and adding them into our site, <strong>we can simply just copy and paste this little code that they have for us</strong>, and we'd have access to the Bootstrap CSS/JavaScript files. Pretty awesome right? Let's go ahead and add the Bootstrap CDN files into our head section of our HTML.
+  If we scroll down on this page, the first thing it says is something about a Bootstrap CDN. <strong>CDN stands for Content Delivery Network, and it basically provides developers with a bunch of files without having to download them into your computer or server.</strong> So in our case, instead of manually downloading Bootstrap's CSS and JavaScript files and adding them into our site, <strong>we can simply just copy and paste this little code that they have for us</strong>, and we'd have access to the Bootstrap CSS/JavaScript files. Pretty awesome right?
+</p>
+
+<%= create_flashcard %>
+
+<p>
+  Let's go ahead and add the Bootstrap CDN files into our head section of our HTML.
 </p>
 
 <pre><code class="erb">
