--- a/app/views/intro_lessons/lessons/lesson_4.html.erb
+++ b/app/views/intro_lessons/lessons/lesson_4.html.erb
@@ -13,20 +13,28 @@
 	As we covered in the last lesson, Ruby is a super beginner friendly programming language (doesn't mean that it's a "beginner's language"!). 
 </p>
 
+<%= create_flashcard %>
+
 <h2>Ruby on Rails</h2>
 <p>
 	Ruby on Rails is a web framework that allows you to build dynamic apps using both front end and back end development. It uses Ruby as the language. In case you were wondering, web frameworks are indeed different from programming languages. Web frameworks allows you to build full web applications easily using programming languages, while programming languages are just languages that simply communicate with the computer. Also in case you were wondering, dynamic apps are apps where data in the server changes dynamically, as opposed to just a static website where a database isn't needed.
 </p>
 
+<%= create_flashcard %>
+
 <h2>HTML</h2>
 <p>
-  HTML is a language that describes the structure of the web page. Every web page has an HTML file and it's what dictates what you see on the browser. With HTML, you can tell the web page to have a header with the name "I like Ice Cream", a paragraph saying "Ice cream is a sophisticated food. It comes in all flavors and colors, etc...", an image of ice cream on top of the paragraph, etc. You can basically tell the web page what you want to include in what format.
+  HTML is a language that describes the structure of the web page. Every web page has an HTML file and dictates what you see on the browser. With HTML, you can tell the web page to have a header with the name "I like Ice Cream", a paragraph saying "Ice cream is a sophisticated food. It comes in all flavors and colors, etc...", an image of ice cream on top of the paragraph, etc. You can tell the web page what you want to include.
 </p>
+
+<%= create_flashcard %>
 
 <h2>CSS</h2>
 <p>
-  CSS is a language that describes how the web page should be displayed. So basically with CSS, you can make the web page have a super pink background, make the fonts huge, or anything you want it to look like. Think of CSS like a blueprint for your design. CSS kind of plays a role of being HTML's strict teacher. CSS basically lays out a blueprint for how the HTML should be displayed, just like how a strict teacher lays out a blueprint for how a student should behave.
+  CSS is what describes how the web page should be displayed. So basically with CSS, you can make the web page have a super pink background, make the fonts huge, or anything you want it to look like. Think of CSS like a blueprint for your design. CSS kind of plays a role of being HTML's strict teacher. CSS basically lays out a blueprint for how the HTML should be displayed, just like how a strict teacher lays out a blueprint for how a student should behave.
 </p>
+
+<%= create_flashcard %>
 
 <h2>JavaScript</h2>
 <p>
@@ -37,15 +45,21 @@
 <%= image_tag 'cat.jpg', id: 'AnimalPic', style: 'height:100px;' %>
 <button id = "ChangeAnimal" class = "btn btn-success">Press Me</button>
 
+<%= create_flashcard %>
+
 <h2>jQuery</h2>
 <p>
   jQuery is a JavaScript library - it's a collection of useful scripts in JavaScript written by other smart people that you can use to make your life easier. JavaScript and jQuery use the same language, but jQuery uses a little different syntax. jQuery and JavaScript is technically the same language, but jQuery is basically just an extension of JavaScript. It's a little more complicated than that, but in general just remember jQuery is a tool that does the same things that JavaScript can do, but much easier.
 </p>
 
+<%= create_flashcard %>
+
 <h2>Git/GitHub</h2>
 <p>
   Git is a tool that allows a team to work together seamlessly. Imagine you have to write some kind of huge essay with 20 different people. How would you effectively know which person is writing which part and editing which part? How would you know if the sentence you wrote still makes sense, given the changes the other teammates made? Wouldn't it be easier if there was a tool that allowed the team to see where changes were made, who made those changes, and also kept the previous changes that you can always revert back to? That's what Git enables you to do. With Git, you can collaborate in a team effectively by being able to see all of the changes that were made by whom, and being able to make comments on the code to suggest a better solution, or simply to tell them their code is awesome.
 </p>
+
+<%= create_flashcard %>
 
 <br>
 <p>
