--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -13,11 +13,11 @@
 
 <div class = "row">
 
-	<%= render partial: 'course', locals: {course: 'Intro', course_name: "An introduction to web development and why it's so cool.", available: true, course_link: intro_path, course_access: 'intro'} %>
+	<%= render partial: 'course', locals: {course: 'Intro', course_name: "An introduction to web development. Discover what makes web development fun and awesome.", available: true, course_link: intro_path, course_access: 'intro'} %>
 
-	<%= render partial: 'course', locals: {course: 'HTML/CSS', course_name: "HTML and CSS is basically how you can make your web pages look nice. Learning the basics of HTML and CSS isn't too scary and is a good intro to web development.", available: true, course_link: html_css_path, course_access: 'html_css'} %>
+	<%= render partial: 'course', locals: {course: 'HTML/CSS', course_name: "HTML and CSS is a core essential skill in web development. Learn the basics of HTML and CSS and start building great looking web pages.", available: true, course_link: html_css_path, course_access: 'html_css'} %>
 	<!-- , lessons: HTMLCSS::LESSONS -->
-	<%= render partial: 'course', locals: {course: 'Ruby Fundamentals', course_name: 'Ruby is a beautiful programming language that makes programming so much easier for beginners. Master the fundamentals of any programming language by learning Ruby.', available: true, course_link: ruby_path, course_access: 'ruby_fundamentals'} %>
+	<%= render partial: 'course', locals: {course: 'Ruby Fundamentals', course_name: 'Ruby is a beautiful programming language that makes programming much easier for beginners. Master the fundamentals of programming by learning Ruby.', available: true, course_link: ruby_path, course_access: 'ruby_fundamentals'} %>
 
 	<%= render partial: 'course', locals: {course: 'Ideator - An idea sharing app', course_name: 'Create your first Ruby on Rails application. You\'ll be building an idea sharing/discovery app where anyone can post their ideas and share them with the world.', available: true, course_link: ideator_path, course_access: 'ideator'} %>
 	<!-- , lessons: RubyOnRails::LESSONS -->
