--- a/app/views/application/show.html.erb
+++ b/app/views/application/show.html.erb
@@ -1,9 +1,9 @@
 <div class="row row-offcanvas row-offcanvas-left">
   <!-- sidebar -->
   <div class="col-lg-2 visible-lg">
-      
-      <%= render 'sidebar' %>
-
+      <div id="sidebar_container">
+        <%= render 'sidebar' %>
+      </div>
   </div>
 
   <div class="col-lg-8 col-lg-offset-1 col-md-12">
